Add local ONNX cutouts for paint pot photos